# mumz

./: .gitignore  EVALS.md  README.md  TRADEOFFS.md  conftest.py  main.py  pyproject.toml  pytest.ini
.streamlit/: config.toml
api/: main.py
cli/: demo.py
data/: catalog.json
evals/: cases.py  grader.py  runner.py  test_cases.json
frontend/: app.py
src/: catalog.py  intent_parser.py  language.py  pipeline.py  recommender.py  retriever.py  schemas.py  validator.py
tests/: test_catalog.py  test_evals.py  test_intent_parser.py  test_language.py  test_pipeline_api.py  test_retriever.py  test_schemas.py  test_validator.py
