[project]
name = "mumz"
version = "0.1.0"
description = "Mumzworld AI Gift Finder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "sentence-transformers>=2.5.0",
    "faiss-cpu>=1.8.0",
    "langdetect>=1.0.9",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mumz-demo = "cli.demo:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
